# cpp-shell

./: .gitignore  README.md  advanced_shell_test.sh  issue_test.sh  shell_test.sh  simple_test.sh  simple_test_fixed.sh  source_test_suite.sh  test_jobs.sh  test_nested_source.sh  test_redirections.sh  test_source.sh
.devcontainer/: devcontainer.json  setup-apt-sources.sh
dash-cpp/: CMakeLists.txt  README.md  test_completion.cpp  test_completion.sh
dash-cpp-main/: CMakeLists.txt
dash-cpp-main/include/builtins/: builtin_command.h  cd_command.h  echo_command.h  fg_command.h  kill_command.h
dash-cpp-main/include/core/: arithmetic.h  executor.h  expand.h  input.h  lexer.h  node.h  output.h  parser.h  shell.h  signal_handler.h  x
dash-cpp-main/include/job/: bg_job_adapter.h  bg_job_control.h  job_control.h
dash-cpp-main/include/utils/: history.h
dash-cpp-main/src/: main.cpp
dash-cpp-main/src/builtins/: bg_command.cpp  cd_command.cpp  echo_command.cpp  exit_command.cpp  jobs_command.cpp  pwd_command.cpp
dash-cpp-main/src/core/: arithmetic.cpp  executor.cpp  input.cpp  node.cpp  parser.cpp  shell.cpp
dash-cpp-main/src/job/: bg_job_adapter.cpp  bg_job_control.c  job_control.cpp
dash-cpp-main/tests/: CMakeLists.txt  chatprompt.md  jobtest.md  myproject.md
dash-cpp-merge/: CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md
dash-cpp-merge/cmake/: FindReadline.cmake
dash-cpp-merge/include/: dash.h
dash-cpp-merge/include/builtins/: bg_command.h  builtin_command.h  cd_command.h  debug_command.h  echo_command.h  exit_command.h  fg_command.h  help_command.h  history_command.h  jobs_command.h  kill_command.h  pwd_command.h  source_command.h  wait_command.h
dash-cpp-merge/include/core/: alias.h  arithmetic.h  executor.h  expand.h  node.h  output.h  parser.h  shell.h  signal_handler.h
dash-cpp-merge/include/job/: bg_job_control.h  job_control.h
dash-cpp-merge/include/utils/: error.h  history.h
dash-cpp-merge/include/variable/: variable_manager.h
dash-cpp-merge/src/: main.cpp
dash-cpp-merge/src/builtins/: bg_command.cpp  cd_command.cpp  debug_command.cpp  echo_command.cpp  exit_command.cpp  fg_command.cpp  help_command.cpp  history_command.cpp  jobs_command.cpp  kill_command.cpp  pwd_command.cpp  source_command.cpp  wait_command.cpp
dash-cpp-merge/src/core/: alias.cpp  arithmetic.cpp  debug.cpp  debug.h  executor.cpp  expand.cpp  input.cpp  lexer.cpp  node.cpp  output.cpp  parser.cpp  shell.cpp  signal_handler.cpp
dash-cpp-merge/src/job/: bg_job_adapter.cpp  bg_job_control.c  job_control.cpp
dash-cpp-merge/src/utils/: error.cpp  history.cpp
dash-cpp-merge/src/variable/: variable_manager.cpp
dash-cpp-merge/tests/: CMakeLists.txt  dummy_test.cpp
dash-cpp/cmake/: FindReadline.cmake
dash-cpp/include/: dash.h
dash-cpp/include/builtins/: bg_command.h  builtin_command.h  cd_command.h  debug_command.h  echo_command.h  exit_command.h  fg_command.h  help_command.h  history_command.h  jobs_command.h  otr_command.h  pwd_command.h  source_command.h  sprf_command.h  su_command.h  tsl_command.h  wait_command.h
dash-cpp/include/core/: alias.h  arithmetic.h  executor.h  expand.h  input.h  lexer.h  node.h  output.h  parser.h  shell.h  signal_handler.h  x
dash-cpp/include/job/: job_control.h
dash-cpp/include/utils/: error.h  history.h  transaction.h
dash-cpp/include/variable/: prompt_string.h  variable_manager.h
dash-cpp/src/: main.cpp
dash-cpp/src/builtins/: bg_command.cpp  cd_command.cpp  debug_command.cpp  echo_command.cpp  exit_command.cpp  fg_command.cpp  help_command.cpp  history_command.cpp  jobs_command.cpp  kill_command.cpp  otr_command.cpp  pwd_command.cpp  source_command.cpp  sprf_command.cpp  su_command.cpp  tsl_command.cpp  wait_command.cpp
dash-cpp/src/core/: alias.cpp  arithmetic.cpp  debug.cpp  debug.h  executor.cpp  expand.cpp  input.cpp  lexer.cpp  node.cpp  output.cpp  parser.cpp  shell.cpp  signal_handler.cpp
dash-cpp/src/job/: bg_job_adapter.cpp  bg_job_control.c  job_control.cpp
dash-cpp/src/utils/: history.cpp  transaction.cpp
dash-cpp/src/variable/: prompt_string.cpp  variable_manager.cpp
dash-cpp/tests/: CMakeLists.txt  jobtest.md  lexer_test.cpp  pipetest.md
dash-debian/: ChangeLog  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
dash-debian/src/: Makefile.am  Makefile.in  alias.c  alias.h  arith_yacc.c  arith_yacc.h  arith_yylex.c  builtins.c  builtins.def  builtins.def.in  builtins.h  cd.c  cd.h  dash  dash.1  error.c  error.h  eval.c  eval.h  exec.c  exec.h  expand.c  expand.h  histedit.c  init.c  init.h  input.c  input.h  jobs.c  jobs.h  machdep.h  mail.c  mail.h  main.c  main.h  memalloc.c  memalloc.h  miscbltin.c  miscbltin.h  mkbuiltins  (+38 more)
dash-debian/src/.deps/: alias.Po  arith_yacc.Po  arith_yylex.Po  builtins.Po  cd.Po  error.Po  eval.Po  exec.Po  expand.Po  histedit.Po  init.Po  input.Po  jobs.Po  mail.Po  main.Po  memalloc.Po  miscbltin.Po  mystring.Po  nodes.Po  options.Po  output.Po  parser.Po  redir.Po  show.Po  signames.Po  syntax.Po  system.Po  trap.Po  var.Po
dash-debian/src/bltin/: bltin.h  printf.c  test.c  times.c
dash-debian/src/bltin/.deps/: printf.Po  test.Po  times.Po
